--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -13,12 +13,17 @@ jobs:
     timeout-minutes: 20
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
+
     - name: Install pdflatex
       run: sudo apt-get install texlive-latex-base texlive-latex-recommended texlive-latex-extra
+
     - name: Build pdf
-      run: make kactl
+      run: make hackpack
+
     - name: Run compiles
       run: make test-compiles
+
     - name: Run stress tests
       run: make test
