--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,8 @@ jobs:
       # First we retrieve that creation date here if possible
     - name: Retrieve last release date
       id: last_release
+      env:
+        GH_TOKEN: ${{ github.token }}
       run: |
         gh release view latest --json createdAt \
           | jq -r '.createdAt' \
@@ -34,6 +36,8 @@ jobs:
       # We also delete the existing `latest` tag and swap it for `<date>`
     - name: Rename old release/tag
       if: steps.last_release.outputs.date != 'release not found'
+      env:
+        GH_TOKEN: ${{ github.token }}
       run: |
         gh release delete ${{ steps.last_release.outputs.date }} --cleanup-tag -y
         gh release edit latest \
