Fix release workflow again (again) (#28)
* Release workflow tweaks

* Fix release workflow for main

* oops that doesn't go to stdout

* Suppress stderr from possible deletion

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,11 +35,12 @@ jobs:
       # If we found an old release, we'll rename it to "Release <date (YYYY/MM/DD)>".
       # We also delete the existing `latest` tag and swap it for `<date>`
     - name: Rename old release/tag
-      if: steps.last_release.outputs.date != 'release not found'
+      if: steps.last_release.outputs.date
       env:
         GH_TOKEN: ${{ github.token }}
       run: |
-        gh release delete ${{ steps.last_release.outputs.date }} --cleanup-tag -y
+        gh release delete ${{ steps.last_release.outputs.date }} \
+          --cleanup-tag -y 2>/dev/null || true
         gh release edit latest \
           -t "Release ${{ steps.last_release.outputs.date }}" \
           --tag ${{ steps.last_release.outputs.date }}
