--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,10 +39,11 @@ jobs:
       env:
         GH_TOKEN: ${{ github.token }}
       run: |
-        git tag -a ${{ steps.last_release.outputs.date }} latest^{}
-
         gh release delete ${{ steps.last_release.outputs.date }} \
           --cleanup-tag -y 2>/dev/null || true
+
+        ref=$(git rev-list -n 1 latest)
+        git tag ${{ steps.last_release.outputs.date }} $ref
 
         gh release edit latest \
           --title "Release ${{ steps.last_release.outputs.date }}" \
