--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,8 +21,8 @@ jobs:
     - name: Install pdflatex
       run: sudo apt-get install texlive-latex-base texlive-latex-recommended texlive-latex-extra
 
-      # We're going to rename the old `latest` release/tag to its creation date.
-      # First we retrieve that creation date here if possible
+    # We're going to rename the old `latest` release/tag to its creation date.
+    # First we retrieve that creation date here if possible
     - name: Retrieve last release date
       id: last_release
       env:
@@ -34,8 +34,8 @@ jobs:
           | awk -F- '{print "date="$1"/"$2"/"$3}' \
           >> $GITHUB_OUTPUT
 
-      # If we found an old release, we'll rename it to "Release <date (YYYY/MM/DD)>".
-      # We also delete the existing `latest` tag and swap it for `<date>`
+    # If we found an old release, we'll rename it to "Release <date (YYYY/MM/DD)>".
+    # We also delete the existing `latest` tag and swap it for `<date>`
     - name: Rename old release/tag
       if: steps.last_release.outputs.date
       env:
@@ -57,11 +57,11 @@ jobs:
         git tag --delete latest
         git push origin :refs/tags/latest
 
-      # Now we build the PDF
+    # Build the PDF (duh)
     - name: Build pdf
       run: make hackpack
 
-      # ...and finally tag a new release with `latest`
+    # ...and finally tag a new release with `latest`
     - name: Create release
       uses: softprops/action-gh-release@v2
       with:
