--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Retrieve last release date
       id: last_release
       env:
-        GH_TOKEN: ${{ github.token }}
+        GH_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
       run: |
         gh release view latest --json createdAt \
           | jq -r '.createdAt' \
@@ -39,7 +39,7 @@ jobs:
     - name: Rename old release/tag
       if: steps.last_release.outputs.date
       env:
-        GH_TOKEN: ${{ github.token }}
+        GH_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
       run: |
         gh release delete ${{ steps.last_release.outputs.date }} \
           --cleanup-tag -y 2>/dev/null || true
